[project]
name = "chronos"
authors = [{name = "Hanna Ruth", email = "hruth@anl.gov"}]
version = "1.0.0"
description = "python package for timing and profiling code execution, with GPU support."
dependencies = [
    "h5py",
    "matplotlib",
    "numpy",
]
requires-python = ">=3.0"

[project.optional-dependencies]
cupy = ["cupy"]
cupy11 = ["cupy-cuda11x"]
cupy12 = ["cupy-cuda12x"]
cupy13 = ["cupy-cuda13x"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["chronos*"]
